security: remove exposed API keys from repository
CRITICAL SECURITY FIX:
- Remove VERCEL_ENV_SETUP.txt containing actual API keys from Git tracking
- Add file to .gitignore to prevent future commits
- Create VERCEL_ENV_SETUP.txt.template with safe placeholders
- Add SECURITY_ALERT.md with key rotation instructions

EXPOSED KEYS (MUST ROTATE):
- OpenRouter API key (HIGH PRIORITY)
- Supabase credentials (public-facing, lower risk)

ACTION REQUIRED:
1. Rotate OpenRouter API key at https://openrouter.ai/keys
2. Update Vercel environment variables
3. Redeploy application

Files:
- .gitignore: Added VERCEL_ENV_SETUP.txt and *_ENV_SETUP.txt patterns
- VERCEL_ENV_SETUP.txt: REMOVED from Git (kept locally)
- VERCEL_ENV_SETUP.txt.template: Safe template for future reference
- SECURITY_ALERT.md: Detailed instructions for key rotation

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ yarn-error.log*
 *.pem
 *.key
 
+# Environment setup files with actual keys
+VERCEL_ENV_SETUP.txt
+*_ENV_SETUP.txt
+
 # vercel
 .vercel
 
